--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:text="HelloApp"
         android:textSize="25sp"
+        android:backgroundTint="@color/black"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -23,6 +24,7 @@
         android:layout_height="wrap_content"
         android:text="MessageApp"
         android:textSize="25sp"
+        android:backgroundTint="@color/black"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/btnHelloApp"/>
@@ -32,9 +34,20 @@
         android:layout_height="wrap_content"
         android:text="IMCApp"
         android:textSize="25sp"
+        android:backgroundTint="@color/black"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/btnMessageApp"/>
+    <Button
+        android:id="@+id/btnBoardGamesApp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Board Games"
+        android:textSize="25sp"
+        android:backgroundTint="@color/black"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnIMCApp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
