--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,6 +49,7 @@
     <color name="light_coral">#F08080</color>
     <color name="pale_goldenrod">#EEE8AA</color>
     <color name="violet">#EE82EE</color>
+    <color name="violet35">#59EE82EE</color>
     <color name="dark_salmon">#E9967A</color>
     <color name="lavender">#E6E6FA</color>
     <color name="light_cyan">#E0FFFF</color>
@@ -164,4 +165,11 @@
     <color name="bgapp_lcg_category">#4CAF50</color>
     <color name="bgapp_cooperative_category">#D016F1</color>
     <color name="bgapp_legacy_category">#EDF351</color>
+
+    <color name="superhero_stat_intelligence">#00ff00</color>
+    <color name="superhero_stat_strength">#FF0000</color>
+    <color name="superhero_stat_speed">#E88B00</color>
+    <color name="superhero_stat_durability">#03A9F4</color>
+    <color name="superhero_stat_power">#FFEB3B</color>
+    <color name="superhero_stat_combat">#673AB7</color>
 </resources>
