--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -48,6 +48,17 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/btnIMCApp"/>
+    <Button
+        android:id="@+id/btnSuperheroApp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Superheroes"
+        android:textSize="25sp"
+        android:backgroundTint="@color/black"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnBoardGamesApp"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
