--- a/app/src/main/res/layout/dialog_game.xml
+++ b/app/src/main/res/layout/dialog_game.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:background="@color/bgapp_background_app"
-        android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="250dp"
+    android:layout_height="wrap_content"
+    android:background="@color/bgapp_background_app"
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <EditText
         android:id="@+id/etGame"
@@ -14,14 +13,16 @@
         android:layout_height="48dp"
         android:backgroundTint="@color/white"
         android:hint="@string/dialog_add_game"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
         android:importantForAutofill="no"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+
     <RadioGroup
         android:id="@+id/rgCategories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <RadioButton
             android:id="@+id/rbCooperative"
             android:layout_width="match_parent"
@@ -30,6 +31,7 @@
             android:checked="true"
             android:text="@string/dialog_cooperative_category"
             android:textColor="@color/white" />
+
         <RadioButton
             android:id="@+id/rbDeckbuilding"
             android:layout_width="match_parent"
@@ -38,6 +40,7 @@
             android:checked="true"
             android:text="@string/dialog_deckbuilding_category"
             android:textColor="@color/white" />
+
         <RadioButton
             android:id="@+id/rbEuro"
             android:layout_width="match_parent"
@@ -46,6 +49,7 @@
             android:checked="true"
             android:text="@string/dialog_euro_category"
             android:textColor="@color/white" />
+
         <RadioButton
             android:id="@+id/rbLcg"
             android:layout_width="match_parent"
@@ -54,6 +58,7 @@
             android:checked="true"
             android:text="@string/dialog_lcg_category"
             android:textColor="@color/white" />
+
         <RadioButton
             android:id="@+id/rbLegacy"
             android:layout_width="match_parent"
@@ -64,13 +69,14 @@
             android:textColor="@color/white" />
 
     </RadioGroup>
+
     <Button
         android:id="@+id/btnAddGame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/bgapp_accent"
         android:text="@string/dialog_newgame_button"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/bgapp_accent"/>
+        android:textColor="@color/white" />
 
-    </LinearLayout>
+</LinearLayout>
 
